SS-41225 Accessibility Feedback - Macro Tool(Visibility Issues 1,3,4)

--- a/plugins/tribute/styles/tribute.css
+++ b/plugins/tribute/styles/tribute.css
@@ -27,7 +27,12 @@
     padding: 4px 2px 4px 12px;
     cursor: pointer; }
     .tribute-container li.highlight {
-      background: #ddd; }
+      background: #949494; }
+@media screen and (-ms-high-contrast: active) {
+    .tribute-container li.highlight {
+        background: #949494;
+    }
+}
     .tribute-container li span {
       font-weight: bold; }
     .tribute-container li.no-match {
